--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
       
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more">
+      <span class="label">Load more...</span>
+    </button>
   
     <script src="./index.js"></script>
   </body>
